fix: small scrin no overflow scroll (no slides)

--- a/styles/index.css
+++ b/styles/index.css
@@ -151,6 +151,7 @@
   top: 0;
   left: 0;
   right: 100%;
+  z-index: -1;
   transition: right 0.2s ease-in;
 }
 .button:hover::before {
@@ -944,7 +945,6 @@
   .tracks-grid {
     -ms-scroll-snap-type: x mandatory;
         scroll-snap-type: x mandatory;
-    overflow-x: scroll;
     grid-template-columns: 100%;
   }
 }
