--- a/styles/modules/blocks/tracks-grid/tracks-grid.scss
+++ b/styles/modules/blocks/tracks-grid/tracks-grid.scss
@@ -13,7 +13,6 @@
 
   @include width-md {
     scroll-snap-type: x mandatory;
-    overflow-x: scroll;
     grid-template-columns: 100%;
   }
 
